Update from https://github.com/staresc/staresc/commit/819d243bf07caa4f882b4c7a9d82344e06e1aef8

--- a/staresc/connection/sshssconnection.html
+++ b/staresc/connection/sshssconnection.html
@@ -614,14 +614,13 @@ and returned as Tuple.</p>
                                     <div><dt><a href="connection.html#Connection">staresc.connection.connection.Connection</a></dt>
                                 <dd id="SSHSSConnection.connection" class="variable"><a href="connection.html#Connection.connection">connection</a></dd>
                 <dd id="SSHSSConnection.command_timeout" class="variable"><a href="connection.html#Connection.command_timeout">command_timeout</a></dd>
+                <dd id="SSHSSConnection.parse" class="function"><a href="connection.html#Connection.parse">parse</a></dd>
                 <dd id="SSHSSConnection.get_scheme" class="function"><a href="connection.html#Connection.get_scheme">get_scheme</a></dd>
                 <dd id="SSHSSConnection.get_hostname" class="function"><a href="connection.html#Connection.get_hostname">get_hostname</a></dd>
                 <dd id="SSHSSConnection.get_port" class="function"><a href="connection.html#Connection.get_port">get_port</a></dd>
                 <dd id="SSHSSConnection.get_credentials" class="function"><a href="connection.html#Connection.get_credentials">get_credentials</a></dd>
-                <dd id="SSHSSConnection.get_root_credentials" class="function"><a href="connection.html#Connection.get_root_credentials">get_root_credentials</a></dd>
                 <dd id="SSHSSConnection.is_connection_string" class="function"><a href="connection.html#Connection.is_connection_string">is_connection_string</a></dd>
                 <dd id="SSHSSConnection.close" class="function"><a href="connection.html#Connection.close">close</a></dd>
-                <dd id="SSHSSConnection.elevate" class="function"><a href="connection.html#Connection.elevate">elevate</a></dd>
 
             </div>
                                 </dl>
