--- a/staresc/connection/sshconnection.html
+++ b/staresc/connection/sshconnection.html
@@ -478,14 +478,13 @@ and returned as Tuple.</p>
                                     <div><dt><a href="connection.html#Connection">staresc.connection.connection.Connection</a></dt>
                                 <dd id="SSHConnection.connection" class="variable"><a href="connection.html#Connection.connection">connection</a></dd>
                 <dd id="SSHConnection.command_timeout" class="variable"><a href="connection.html#Connection.command_timeout">command_timeout</a></dd>
+                <dd id="SSHConnection.parse" class="function"><a href="connection.html#Connection.parse">parse</a></dd>
                 <dd id="SSHConnection.get_scheme" class="function"><a href="connection.html#Connection.get_scheme">get_scheme</a></dd>
                 <dd id="SSHConnection.get_hostname" class="function"><a href="connection.html#Connection.get_hostname">get_hostname</a></dd>
                 <dd id="SSHConnection.get_port" class="function"><a href="connection.html#Connection.get_port">get_port</a></dd>
                 <dd id="SSHConnection.get_credentials" class="function"><a href="connection.html#Connection.get_credentials">get_credentials</a></dd>
-                <dd id="SSHConnection.get_root_credentials" class="function"><a href="connection.html#Connection.get_root_credentials">get_root_credentials</a></dd>
                 <dd id="SSHConnection.is_connection_string" class="function"><a href="connection.html#Connection.is_connection_string">is_connection_string</a></dd>
                 <dd id="SSHConnection.close" class="function"><a href="connection.html#Connection.close">close</a></dd>
-                <dd id="SSHConnection.elevate" class="function"><a href="connection.html#Connection.elevate">elevate</a></dd>
 
             </div>
                                 </dl>
