Update from https://github.com/staresc/staresc/commit/e2cae3460fe2199f4206b4a5223cc5bc0071d57f

--- a/staresc/core.html
+++ b/staresc/core.html
@@ -29,6 +29,7 @@
 
         <h2>Submodules</h2>
         <ul>
+                <li><a href="core/raw.html">raw</a></li>
                 <li><a href="core/runner.html">runner</a></li>
                 <li><a href="core/staresc.html">staresc</a></li>
         </ul>
