--- a/staresc/exporter.html
+++ b/staresc/exporter.html
@@ -62,7 +62,7 @@
 </span><span id="L-4"><a href="#L-4"><span class="linenos">4</span></a><span class="sd">&quot;&quot;&quot;</span>
 </span><span id="L-5"><a href="#L-5"><span class="linenos">5</span></a>
 </span><span id="L-6"><a href="#L-6"><span class="linenos">6</span></a><span class="kn">from</span> <span class="nn">.exporter</span> <span class="kn">import</span> <span class="n">StarescExporter</span>
-</span><span id="L-7"><a href="#L-7"><span class="linenos">7</span></a><span class="kn">from</span> <span class="nn">.handlers</span> <span class="kn">import</span> <span class="n">StarescHandler</span><span class="p">,</span> <span class="n">StarescCSVHandler</span><span class="p">,</span> <span class="n">StarescStdoutHandler</span><span class="p">,</span> <span class="n">StarescXLSXHandler</span><span class="p">,</span> <span class="n">StarescJSONHandler</span>
+</span><span id="L-7"><a href="#L-7"><span class="linenos">7</span></a><span class="kn">from</span> <span class="nn">.handlers</span> <span class="kn">import</span> <span class="n">StarescHandler</span><span class="p">,</span> <span class="n">StarescCSVHandler</span><span class="p">,</span> <span class="n">StarescStdoutHandler</span><span class="p">,</span> <span class="n">StarescXLSXHandler</span><span class="p">,</span> <span class="n">StarescJSONHandler</span><span class="p">,</span> <span class="n">StarescRawHandler</span>
 </span></pre></div>
 
 
