--- a/staresc.html
+++ b/staresc.html
@@ -25,6 +25,7 @@
 
         <h2>Submodules</h2>
         <ul>
+                <li><a href="staresc/cli.html">cli</a></li>
                 <li><a href="staresc/connection.html">connection</a></li>
                 <li><a href="staresc/core.html">core</a></li>
                 <li><a href="staresc/exceptions.html">exceptions</a></li>
@@ -54,10 +55,22 @@ staresc    </h1>
 
                         <label class="view-source-button" for="mod-staresc-view-source"><span>View Source</span></label>
 
-                        <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos">1</span></a><span class="ch">#!/usr/bin/python</span>
-</span><span id="L-2"><a href="#L-2"><span class="linenos">2</span></a>
-</span><span id="L-3"><a href="#L-3"><span class="linenos">3</span></a>
-</span><span id="L-4"><a href="#L-4"><span class="linenos">4</span></a><span class="n">VERSION</span> <span class="o">=</span> <span class="s2">&quot;v2.2&quot;</span>
+                        <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos"> 1</span></a><span class="ch">#!/usr/bin/python</span>
+</span><span id="L-2"><a href="#L-2"><span class="linenos"> 2</span></a>
+</span><span id="L-3"><a href="#L-3"><span class="linenos"> 3</span></a>
+</span><span id="L-4"><a href="#L-4"><span class="linenos"> 4</span></a><span class="n">VERSION</span> <span class="o">=</span> <span class="s2">&quot;v2.3&quot;</span>
+</span><span id="L-5"><a href="#L-5"><span class="linenos"> 5</span></a>
+</span><span id="L-6"><a href="#L-6"><span class="linenos"> 6</span></a>
+</span><span id="L-7"><a href="#L-7"><span class="linenos"> 7</span></a><span class="n">BANNER</span> <span class="o">=</span> <span class="s2">&quot;&quot;&quot; _______ _________ _______  _______  _______  _______  _______ </span>
+</span><span id="L-8"><a href="#L-8"><span class="linenos"> 8</span></a><span class="s2">(  ____ </span><span class="se">\\\\</span><span class="s2">__   __/(  ___  )(  ____ )(  ____ </span><span class="se">\\</span><span class="s2">(  ____ </span><span class="se">\\</span><span class="s2">(  ____ </span><span class="se">\\</span><span class="s2"></span>
+</span><span id="L-9"><a href="#L-9"><span class="linenos"> 9</span></a><span class="s2">| (    </span><span class="se">\\</span><span class="s2">/   ) (   | (   ) || (    )|| (    </span><span class="se">\\</span><span class="s2">/| (    </span><span class="se">\\</span><span class="s2">/| (    </span><span class="se">\\</span><span class="s2">/</span>
+</span><span id="L-10"><a href="#L-10"><span class="linenos">10</span></a><span class="s2">| (_____    | |   | (___) || (____)|| (__    | (_____ | |      </span>
+</span><span id="L-11"><a href="#L-11"><span class="linenos">11</span></a><span class="s2">(_____  )   | |   |  ___  ||     __)|  __)   (_____  )| |      </span>
+</span><span id="L-12"><a href="#L-12"><span class="linenos">12</span></a><span class="s2">      ) |   | |   | (   ) || (</span><span class="se">\\</span><span class="s2"> (   | (            ) || |      </span>
+</span><span id="L-13"><a href="#L-13"><span class="linenos">13</span></a><span class="s2">/</span><span class="se">\\</span><span class="s2">____) |   | |   | )   ( || ) </span><span class="se">\\</span><span class="s2"> </span><span class="se">\\</span><span class="s2">__| (____/</span><span class="se">\\</span><span class="s2">/</span><span class="se">\\</span><span class="s2">____) || (____/</span><span class="se">\\</span><span class="s2"></span>
+</span><span id="L-14"><a href="#L-14"><span class="linenos">14</span></a><span class="se">\\</span><span class="s2">_______)   )_(   |/     </span><span class="se">\\</span><span class="s2">||/   </span><span class="se">\\</span><span class="s2">__/(_______/</span><span class="se">\\</span><span class="s2">_______)(_______/</span>
+</span><span id="L-15"><a href="#L-15"><span class="linenos">15</span></a><span class="s2">                                             - by 5amu &amp; cekout</span>
+</span><span id="L-16"><a href="#L-16"><span class="linenos">16</span></a><span class="s2">&quot;&quot;&quot;</span>
 </span></pre></div>
 
 
