--- a/staresc/core.html
+++ b/staresc/core.html
@@ -32,8 +32,9 @@
         <ul>
                 <li><a href="core/check.html">check</a></li>
                 <li><a href="core/raw.html">raw</a></li>
-                <li><a href="core/runner.html">runner</a></li>
-                <li><a href="core/staresc.html">staresc</a></li>
+                <li><a href="core/scan.html">scan</a></li>
+                <li><a href="core/test.html">test</a></li>
+                <li><a href="core/worker.html">worker</a></li>
         </ul>
 
 
@@ -59,15 +60,17 @@
 
                         <label class="view-source-button" for="mod-core-view-source"><span>View Source</span></label>
 
-                        <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos">1</span></a><span class="ch">#!/usr/bin/python</span>
-</span><span id="L-2"><a href="#L-2"><span class="linenos">2</span></a><span class="sd">&quot;&quot;&quot; Core functionalities for staresc.</span>
-</span><span id="L-3"><a href="#L-3"><span class="linenos">3</span></a>
-</span><span id="L-4"><a href="#L-4"><span class="linenos">4</span></a><span class="sd">It containes the runner and the main classes: StarescRunner() and Staresc().</span>
-</span><span id="L-5"><a href="#L-5"><span class="linenos">5</span></a><span class="sd">&quot;&quot;&quot;</span>
-</span><span id="L-6"><a href="#L-6"><span class="linenos">6</span></a>
-</span><span id="L-7"><a href="#L-7"><span class="linenos">7</span></a>
-</span><span id="L-8"><a href="#L-8"><span class="linenos">8</span></a><span class="kn">from</span> <span class="nn">.staresc</span> <span class="kn">import</span> <span class="n">Staresc</span>
-</span><span id="L-9"><a href="#L-9"><span class="linenos">9</span></a><span class="kn">from</span> <span class="nn">.runner</span> <span class="kn">import</span> <span class="n">StarescRunner</span>
+                        <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos"> 1</span></a><span class="ch">#!/usr/bin/python</span>
+</span><span id="L-2"><a href="#L-2"><span class="linenos"> 2</span></a><span class="sd">&quot;&quot;&quot; Core functionalities for staresc.</span>
+</span><span id="L-3"><a href="#L-3"><span class="linenos"> 3</span></a>
+</span><span id="L-4"><a href="#L-4"><span class="linenos"> 4</span></a><span class="sd">It containes the runner and the main classes: StarescRunner() and Staresc().</span>
+</span><span id="L-5"><a href="#L-5"><span class="linenos"> 5</span></a><span class="sd">&quot;&quot;&quot;</span>
+</span><span id="L-6"><a href="#L-6"><span class="linenos"> 6</span></a>
+</span><span id="L-7"><a href="#L-7"><span class="linenos"> 7</span></a>
+</span><span id="L-8"><a href="#L-8"><span class="linenos"> 8</span></a><span class="kn">from</span> <span class="nn">.scan</span> <span class="kn">import</span> <span class="n">Scanner</span>
+</span><span id="L-9"><a href="#L-9"><span class="linenos"> 9</span></a><span class="kn">from</span> <span class="nn">.check</span> <span class="kn">import</span> <span class="n">Checker</span>
+</span><span id="L-10"><a href="#L-10"><span class="linenos">10</span></a><span class="kn">from</span> <span class="nn">.raw</span> <span class="kn">import</span> <span class="n">Raw</span>
+</span><span id="L-11"><a href="#L-11"><span class="linenos">11</span></a><span class="kn">from</span> <span class="nn">.test</span> <span class="kn">import</span> <span class="n">Tester</span>
 </span></pre></div>
 
 
